--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -21,7 +21,6 @@ header {
   align-items: center;
   width: 1500px;
   height: 65px;
-  border: 1px solid black;
   padding-left: 30px;
 }
 
@@ -54,23 +53,19 @@ header nav {
 
 .content {
   display: flex;
-  border: 1px solid black;
-  width: 1200px;
-  margin-top: 0px;
-  margin-right: auto;
-  margin-bottom: 75px;
-  margin-left: auto;
+  width: 1230px;
+  margin: 0 auto 78px auto;
   padding-top: 115px;
-}
-
-.column.large{
-  width: 630px;
 }
 
 .column {
   display: flex;
   flex-direction: column;
-  margin-right: 30px;
+  margin-right: 32px;
+}
+
+.column.large {
+  width: 630px;
 }
 
 .column.medium {
@@ -81,6 +76,52 @@ header nav {
   width: 240px;
 }
 
-div {
-  border: 1px solid black;
+.image-content {
+  font-family: Georgia;
+  font-weight: bold;
+  font-size: 30px;
+  color: white;
+  text-align: center;
+  margin-top: 15px;
+  height: 300px;
+}
+
+.main-story .image-content {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png");
+  font-size: 40px;
+  text-align: left;
+  width: 630px;
+  margin-top: 0;
+}
+
+.earth.image-content {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png");
+}
+
+.hipster.image-content {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png");
+}
+
+.cat.image-content {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png");
+}
+
+.stories {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 15px;
+}
+
+.story {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+
+.stories .text {
+  height: 250px;
+}
+
+.paragraph {
+  margin-top: 15px;
 }
