--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -32,11 +32,11 @@ header {
   color: MediumAquamarine;
 }
 
-.nav a {
+a {
   color: black;
 }
 
-.nav {
+nav {
   display: flex;
   align-items: center;
   margin-right: 30px
@@ -46,7 +46,7 @@ header nav {
   padding-right: 40px;
 }
 
-.nav span{
+nav span{
   display: inline-block;
   margin: 20px 10px;
 }
@@ -84,6 +84,10 @@ header nav {
   text-align: center;
   margin-top: 15px;
   height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
 }
 
 .main-story .image-content {
@@ -124,4 +128,54 @@ header nav {
 
 .paragraph {
   margin-top: 15px;
+}
+
+img.cookie {
+  height: 240px;
+}
+
+.news-bites h3 {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.news-bites .bite {
+  display: block;
+  padding: 10px 20px;
+  width: 240px;
+  border-bottom: 1px solid black;
+  background-color: Whitesmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  height: 325px;
+  width: 100%;
+}
+
+footer .my-times {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  display: inline-block;
+  border-right: 2px solid white;
+  padding-right: 25px;
+}
+
+footer nav {
+  display: inline-block;
+  padding-left: 25px;
 }
